@@ -90,6 +90,9 @@ extern observable<> executable_changed;
 extern observable<struct target_ops */* target */,
 		  int /* from_tty */> inferior_created;
 
+/* The inferior INF has exec'ed a new executable file.  */
+extern observable<struct inferior */* inf */> inferior_execd;
+
 /* The status of process record for inferior inferior in gdb has
    changed.  The process record is started if STARTED is true, and
    the process record is stopped if STARTED is false.
